--- a/html-css/exercicios/ex001/index.html
+++ b/html-css/exercicios/ex001/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Ola mundo!</h1>
+    <hr>
     <p>Esse é o meu primeiro documento</p>
+    <p>estou muito feliz</p>
 </body>
 </html>
