--- a/html-css/exercicios/ex003/index.html
+++ b/html-css/exercicios/ex003/index.html
@@ -8,8 +8,10 @@
 <body>
         <h1>testando imagens</h1>
         <p>imagen na pasta</p>
-        <img src="HTML5_logo_and_wordmark.svg.png" alt="Logo HTML5">
-        
-
+        <img src="logohtml200.png" alt="Logo HTML5">
+        <p>imagens de subpastas</p>
+        <img src="imagems/logocss200.jpg" alt="Logo CSS">
+        <p>tambem podemos carregar imagems externas</p>
+        <img src="https://us.123rf.com/450wm/get4net/get4net2112/get4net211229215/179641442-javascript-is-a-high-level-interpreted-programming-language.jpg?ver=6" alt="Logo Javascript">
 </body>
 </html>
